Fixed horizontal scrolling

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -26,9 +26,6 @@
     margin-top: 10px;
     margin-bottom: 10px;
   }
-  .offer svg {
-    height: 100px;
-  }
 }
 
 @media (min-width: 840px) and (max-width: 1250px){
